--- a/pagina.html
+++ b/pagina.html
@@ -60,16 +60,11 @@
                     "legend": {
                         "title": "Número de escolas no bairro",
                         "direction": "horizontal", //Default é vertical
-                        "orient": "bottom-right", //Default é right
-                        "fill": "Black",
-                        "range": { "scheme": "Blues" }
+                        "orient": "bottom-right" //Default é right
+                    },
+                    "scale": {
+                        "range": ["#efedf5", "#bcbddc", "#756bb1"]
                     }
-                }
-            },
-            "config": {
-                "legend": {
-                    "fill": "Blues",
-                    "symbolBaseStrokeColor": "black"
                 }
             }
         };
