Título e escala escurecida

--- a/pagina.html
+++ b/pagina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Vega Lite Bar Chart</title>
+    <title>Bairros por escolas</title>
     <meta charset="utf-8">
 
     <script src="https://cdn.jsdelivr.net/npm/vega@4.2.0/build/vega.js"></script>
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <h1>Template for Embedding Vega-Lite Visualization</h1>
+    <h1>Bairros por escolas</h1>
     <!-- Container for the visualization -->
     <div id="vis"></div>
 
@@ -63,7 +63,7 @@
                         "orient": "bottom-right" //Default é right
                     },
                     "scale": {
-                        "range": ["#efedf5", "#bcbddc", "#756bb1"]
+                        "range": ["rgb(209, 207, 215)", "rgb(138, 139, 170)", "rgb(67, 57, 127)"]
                     }
                 }
             }
