--- a/pagina.html
+++ b/pagina.html
@@ -28,10 +28,10 @@
             "width": 1000,
             "height": 600,
             "data": {
-                "url": "geocgbairo.json",
+                "url": "geocgbairro.json",
                 "format": {
                     "type": "topojson",
-                    "feature": "geocgbairo"
+                    "feature": "geocgbairro"
                 }
             },
             "transform": [{
